fix: Story 5.1 code review - suppress Generation side effects during export
- Guard view zoom commands with globals.suppressViewRefresh flag
- Save/restore container.previousChannelMode around createMultiChannelTracks
- Remove dead needsTrackHierarchy() function
- Pass pre-computed trackStructure to eliminate redundant item analysis
- Consistent "Export -" naming for multichannel folder tracks
- Add defensive checks for all Generation sub-functions

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -42,15 +42,15 @@ development_status:
   4-4-loop-interval-auto-mode-ui: done
 
   # Epic 5 - Bug Fixes (CURRENT SPRINT)
-  5-1-export-track-hierarchy-creation: review
+  5-1-export-track-hierarchy-creation: done
   5-2-export-multichannel-item-distribution: ready-for-dev
   5-3-loop-overlap-after-split-swap: ready-for-dev
 
 # Sprint Summary
 stories_total: 14
-stories_done: 11
+stories_done: 12
 stories_in_progress: 0
-stories_ready: 3
+stories_ready: 2
 stories_backlog: 0
 
 # Notes
