--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -43,14 +43,14 @@ development_status:
 
   # Epic 5 - Bug Fixes (CURRENT SPRINT)
   5-1-export-track-hierarchy-creation: done
-  5-2-export-multichannel-item-distribution: ready-for-dev
+  5-2-export-multichannel-item-distribution: review
   5-3-loop-overlap-after-split-swap: ready-for-dev
 
 # Sprint Summary
 stories_total: 14
 stories_done: 12
 stories_in_progress: 0
-stories_ready: 2
+stories_ready: 1
 stories_backlog: 0
 
 # Notes
