fix: Story 5.2 code review - refactor and fix multichannel export
Code review fixes (7 issues: 2 HIGH, 3 MEDIUM, 2 LOW):
- H1: Refactored placeContainerItems() from 281 to 65 lines
- H2: Eliminated upvalue mutation, explicit position returns
- M1: Added AC#8 validation in processLoop (targetDuration)
- M2: Reduced UI parameter count (6→5 via renderContext)
- M3: Fixed distribution counter per-instance alignment
- L1: Updated architecture doc with multichannelExportMode
- L2: Added defensive guard for invalid export mode

Story status: done (13/14 stories complete)

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -43,12 +43,12 @@ development_status:
 
   # Epic 5 - Bug Fixes (CURRENT SPRINT)
   5-1-export-track-hierarchy-creation: done
-  5-2-export-multichannel-item-distribution: review
+  5-2-export-multichannel-item-distribution: done  # Code review complete (7 issues fixed)
   5-3-loop-overlap-after-split-swap: ready-for-dev
 
 # Sprint Summary
 stories_total: 14
-stories_done: 12
+stories_done: 13
 stories_in_progress: 0
 stories_ready: 1
 stories_backlog: 0
