docs: Story 5.6 - Multi-Channel Preserve Loop Timestamp Sync
Created story for critical bug affecting multi-channel preserve loop exports.

Problem:
- Each track in multi-channel preserve mode fills independently
- Tracks start/end at different timestamps
- Exported region doesn't loop seamlessly across all channels

Solution:
1. Overfill each track based on abs(triggerRate)
2. Detect earliest start and latest end across all tracks
3. Synchronize all tracks to same start/end timestamps
4. Split & swap excess items using zero-crossing detection
5. Maintain correct interval after repositioning

Priority: CRITICAL
Affects: Multi-channel preserve loop mode only
Reuses: Story 3.2 zero-crossing split logic

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -47,12 +47,13 @@ development_status:
   5-3-loop-overlap-after-split-swap: done  # Code review complete (9 issues fixed)
   5-4-all-tracks-respect-container-interval: review
   5-5-roundrobin-independent-track-positioning: ready-for-dev
+  5-6-multichannel-preserve-loop-sync: ready-for-dev  # CRITICAL: Track timestamp sync
 
 # Sprint Summary
-stories_total: 16
+stories_total: 17
 stories_done: 14
 stories_in_progress: 0
-stories_ready: 2
+stories_ready: 3
 stories_backlog: 0
 
 # Notes
@@ -60,7 +61,8 @@ notes:
   - "Epic 5 contains critical bug fixes discovered post-implementation"
   - "Story 5.2 is a regression from Story 1.2 - multichannel distribution was supposed to work"
   - "Stories 5.4 and 5.5 discovered during manual testing - affect item spacing in All Tracks and Round-Robin modes"
-  - "All 5 bugs affect core export functionality and should be fixed before production use"
+  - "Story 5.6 discovered during Story 5.4 testing - CRITICAL multi-channel preserve loop desync"
+  - "All bugs affect core export functionality and should be fixed before production use"
 
 # Backlog (low priority)
 backlog:
