fix: Story 5.6 - Multi-channel preserve loop sync with proper overlap
Three critical bugs fixed in syncMultiChannelLoopTracks():

1. Export_Loop dependency never wired (v1.17): init.lua only passed
   Export_Settings to Export_Placement, never Export_Loop. The split/wrap
   code always fell to the trim fallback, never creating wrap-around items.

2. First-item trim after rightPart wrap (v1.18): rightParts placed at
   targetStart fully superposed existing first items. Now trims first
   items from the left so overlap matches effectiveInterval.
   Formula: requiredFirstItemStart = targetStart + rightPartLen + effectiveInterval

3. Skip processLoop for multi-channel sync (Export_Engine v1.17):
   processLoop would do a second split/swap destroying alignment.
   Added syncApplied flag from placeContainerItems 4th return value.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -47,13 +47,13 @@ development_status:
   5-3-loop-overlap-after-split-swap: done  # Code review complete (9 issues fixed)
   5-4-all-tracks-respect-container-interval: review
   5-5-roundrobin-independent-track-positioning: ready-for-dev
-  5-6-multichannel-preserve-loop-sync: ready-for-dev  # CRITICAL: Track timestamp sync
+  5-6-multichannel-preserve-loop-sync: review  # Code review v2 fixes applied: trim-to-bounds, skip processLoop, extension fix
 
 # Sprint Summary
 stories_total: 17
 stories_done: 14
 stories_in_progress: 0
-stories_ready: 3
+stories_ready: 1
 stories_backlog: 0
 
 # Notes
